# LLM_step_by_step

./: .gitignore  Readme.md  pyproject.toml
Decoder/: __init__.py  __main__.py
FFN/: __init__.py  __main__.py
GPT/: __init__.py  __main__.py
GPT1/: __init__.py
GPT2/: __init__.py  __main__.py
attention/MaskedHeadAttention/: __init__.py  __main__.py
attention/MultiHeadAttention/: __init__.py  __main__.py
embeddings/PositionalEmbeddings/: __init__.py  __main__.py
embeddings/TokenEmbeddings/: __init__.py  __main__.py
tokenizer/BPE/: __init__.py  __main__.py
train/: dataset.py  prepare_data.py  train.py  trainer.py
train/configs/: base.yaml  checkpointing.yaml  dataset.yaml  logging.yaml  model.yaml  training.yaml
train/src/: dataset.py  trainer.py
