[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_step_by_step"
version = "0.1.0"
description = "GPT-style language model built from scratch, step by step"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.8.0",
    "safetensors>=0.4.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
logging = [
    "wandb>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
